rearranged files to segregate html, css, bs4 codes

--- a/html/css-basics/css-demo.html
+++ b/html/css-basics/css-demo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World Demo Page</title>
-    <link rel="stylesheet" href="../css/css-demo.css" />
+    <link rel="stylesheet" href="../../css/css-demo.css" />
     <style>
       /* body {
         text-align: center;
