--- a/html/bootstrap-basics/bootstrap-demo.html
+++ b/html/bootstrap-basics/bootstrap-demo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap Template</title>
+    <title>Bootstrap Demo</title>
     <link
       href="../../vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
