examples for bootstrap buttons, containers, tables

--- a/html/bootstrap-basics/bootstrap-containers.html
+++ b/html/bootstrap-basics/bootstrap-containers.html
@@ -56,6 +56,13 @@
       </p>
     </div>
 
+    <div class="container col-4 offset-4" style="background: rgb(24, 154, 206)">
+      <div class="row">
+        <div class="col-4" style="background: rgb(174, 230, 21)">Div I</div>
+        <div class="col-6" style="background: rgb(194, 116, 44)">Div II</div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
