added code for js form validation

--- a/html/js-basics/js-form-validation.html
+++ b/html/js-basics/js-form-validation.html
@@ -28,7 +28,7 @@
               class="font-weight-bold"
               action="login-backend"
               method="GET"
-              onsubmit="event.preventDefault(); validateFormInputs();"
+              onsubmit="validateFormInputs();"
             >
               <!-- Email -->
               <div id="emailField" name="emailField" class="form-group row">
